--- a/package.json
+++ b/package.json
@@ -13,18 +13,25 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.29.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0-rc22",
     "lucide-react": "^0.331.0",
     "next": "14.1.0",
+    "next-sanity": "^7.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "sanity": "^3.29.1",
+    "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
