--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.29.1",
+    "@stripe/react-stripe-js": "^2.5.0",
+    "@stripe/stripe-js": "^3.0.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
@@ -32,10 +35,13 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "sanity": "^3.29.1",
+    "stripe": "^14.17.0",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "use-shopping-cart": "^3.2.0",
+    "zod": "^3.22.4",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
